--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "main": "index.js",
   "license": "MIT",
   "dependencies": {
+    "@types/express": "^4.17.21",
     "express": "^4.18.2"
   }
 }
