--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "main": "index.js",
   "license": "MIT",
   "dependencies": {
-    "@types/express": "^4.17.21",
-    "express": "^4.18.2"
+    "express": "4.17.1"
+  },
+  "devDependencies": {
+    "@types/express": "4.17.6"
   }
 }
